--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="P:/Informatica/Materiais Didaticos/Matutino/2o Semestre/Técnicas de Programação II/2019-08-22 (bd)/sqljdbc42.jar"/>
+	<classpathentry exported="true" kind="lib" path="Z:/2o semestre/TI201 - TP/Eclipse Workspace/files/sqljdbc42.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
